--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -7,7 +7,7 @@
   .mj-section-content {
     @include centre-content;
 
-    max-width: 536px
+    max-width: 536px;
     width: 80%;
   }
 
